--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "three": "^0.142.0"
   },
   "devDependencies": {
-    "@parcel/transformer-glsl": "2.6.2"
+    "@parcel/transformer-glsl": "2.6.2",
+    "@parcel/transformer-sass": "2.6.2"
   }
 }
