Effects: Mouse wave.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "fontfaceobserver": "^2.3.0",
+    "gsap": "^3.11.0",
     "imagesloaded": "^5.0.0",
     "three": "^0.142.0"
   },
